require data from sign up

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
           <img class="amazon-mobile-logo"
             src="images/amazon-mobile-logo-white.png">
         </a>
+        <a href="signup.html" class="signup-link">Sign Up</a>
       </div>
 
       <div class="amazon-header-middle-section">
