--- a/public/singin.html
+++ b/public/singin.html
@@ -39,6 +39,6 @@
       </p>
     </form>
   </div>
-  <script type="module" src="scripts/signup.js"></script>
+  <script type="module" src="scripts/signin.js"></script>
 </body>
 </html>
