--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
           <img class="amazon-mobile-logo"
             src="images/amazon-mobile-logo-white.png">
         </a>
-        <a href="signup.html" class="signup-link">Sign Up</a>
+        <div class="auth-links">
+          <a href="signup.html" class="signup-link">Sign In</a>
+          <a href="profile.html" class="profile-link">Profile</a>
+        </div>
       </div>
 
       <div class="amazon-header-middle-section">
