--- a/public/signup.html
+++ b/public/signup.html
@@ -37,7 +37,7 @@
       <button type="submit" class="signup-button js-signup-button">Continue</button>
 
       <p class="signin-redirect">
-        Already have an account? <a href="singin.html">Sign in</a>
+        Already have an account? <a href="signin.html">Sign in</a>
       </p>
     </form>
   </div>
