done for the day

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
             src="images/amazon-mobile-logo-white.png">
         </a>
         <div class="auth-links">
-          <a href="signup.html" class="signup-link">Sign In</a>
-          <a href="profile.html" class="profile-link">Profile</a>
+          <a href="signup.html" class="signup-link js-signup-link">Sign In</a>
+          <a href="profile.html" class="profile-link js-profile-link">Profile</a>
         </div>
       </div>
 
