--- a/public/tracking.html
+++ b/public/tracking.html
@@ -38,6 +38,10 @@
       </div>
 
       <div class="amazon-header-right-section">
+        <div class="auth-links">
+          <a href="signup.html" class="signup-link js-signup-link  header-link">Sign In</a>
+          <a href="profile.html" class="profile-link js-profile-link  header-link">Profile</a>
+        </div>
         <a class="orders-link header-link" href="orders.html">
           <span class="returns-text">Returns</span>
           <span class="orders-text">& Orders</span>
