add semi mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,22 @@
           <div class="cart-text">Cart</div>
         </a>
       </div>
+        <div class="mobile-menu-icon js-mobile-menu-toggle">
+            ☰
+        </div>
     </div>
+
+  <div class="mobile-sidebar js-mobile-sidebar">
+    <div class="mobile-sidebar-header">
+      <span class="js-close-sidebar">✕</span>
+    </div>
+    <ul class="mobile-sidebar-links">
+      <li><a href="profile.html">Profile</a></li>
+      <li><a href="orders.html">Returns & Orders</a></li>
+      <li><a href="checkout.html">Cart</a></li>
+      <li><a href="signup.html">Sign Up</a></li>
+    </ul>
+  </div>
     
     <div class="main">
       <div class="products-grid js-product-grid">
